--- a/Assets/ADDOL/SteamingAssets/AppConfig.json
+++ b/Assets/ADDOL/SteamingAssets/AppConfig.json
@@ -1,3 +1,3 @@
 {
-  "WebAPILink": "api.openweathermap.org/data/2.5/weather?id={0}&appid=92da236259fb7d206ade219f6de7fe18&units=metric"
+  "WebAPILink": "api.openweathermap.org/data/2.5/weather?q={0}&appid=92da236259fb7d206ade219f6de7fe18&units=metric"
 }
